--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "handlebars": "^4.0.11",
     "mongojs": "^2.5.0",
     "mongoose": "^5.0.10",
     "morgan": "^1.9.0",
+    "npm": "^5.7.1",
     "request": "^2.85.0"
   }
 }
